template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vmName": {
            "type": "String",
            "metadata": {
                "description": "Name of the virtual machine"
            }
        },
        "adminUsername": {
            "type": "String",
            "metadata": {
                "description": "Username for the virtual machine"
            }
        },
        "adminPassword": {
            "type": "SecureString",
            "metadata": {
                "description": "Password for the virtual machine"
            }
        },
        "location": {
            "defaultValue": "eastus",
            "type": "String",
            "metadata": {
                "description": "Location for all resources"
            }
        },
        "osDiskSizeGB": {
            "defaultValue": 30,
            "minValue": 30,
            "maxValue": 1023,
            "type": "Int",
            "metadata": {
                "description": "OS disk size in GB (minimum 30GB, maximum 1023GB)"
            }
        }
    },
    "variables": {
        "vnetName": "[concat(parameters('vmName'), '-vnet')]",
        "nsgName": "[concat(parameters('vmName'), '-nsg')]",
        "nicName": "[concat(parameters('vmName'), '-nic')]",
        "subnetName": "default",
        "vmSize": "Standard_B1ls"
    },
    "resources": [
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-06-01",
            "name": "[variables('vnetName')]",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-06-01",
            "name": "[variables('nsgName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowSSH",
                        "properties": {
                            "priority": 1000,
                            "protocol": "Tcp",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "22"
                        }
                    },
                    {
                        "name": "AllowHTTP",
                        "properties": {
                            "priority": 1001,
                            "protocol": "Tcp",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "80"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-06-01",
            "name": "[variables('nicName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('subnetName'))]"
                            },
                            "privateIPAllocationMethod": "Dynamic"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-07-01",
            "name": "[parameters('vmName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('vmSize')]"
                },
                "osProfile": {
                    "computerName": "[parameters('vmName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "customData": "[base64('#!/bin/bash\napt-get update\napt-get install -y apache2\nsystemctl enable apache2\nsystemctl start apache2')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "0001-com-ubuntu-server-jammy",
                        "sku": "22_04-lts",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "diskSizeGB": "[parameters('osDiskSizeGB')]"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {
        "resourceGroup": {
            "type": "String",
            "value": "[resourceGroup().name]"
        },
        "vmName": {
            "type": "String",
            "value": "[parameters('vmName')]"
        },
        "vmSize": {
            "type": "String",
            "value": "[variables('vmSize')]"
        },
        "adminUsername": {
            "type": "String",
            "value": "[parameters('adminUsername')]"
        },
        "osDiskSizeGB": {
            "type": "Int",
            "value": "[parameters('osDiskSizeGB')]"
        },
        "virtualNetworkName": {
            "type": "String",
            "value": "[variables('vnetName')]"
        },
        "networkSecurityGroupName": {
            "type": "String",
            "value": "[variables('nsgName')]"
        },
        "privateIPAddress": {
            "type": "String",
            "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))).ipConfigurations[0].properties.privateIPAddress]"
        },
        "deploymentDetails": {
            "type": "Object",
            "value": {
                "vmName": "[parameters('vmName')]",
                "resourceGroup": "[resourceGroup().name]",
                "location": "[parameters('location')]",
                "adminUsername": "[parameters('adminUsername')]",
                "osDiskSizeGB": "[parameters('osDiskSizeGB')]",
                "vmSize": "[variables('vmSize')]",
                "privateIPAddress": "[reference(resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))).ipConfigurations[0].properties.privateIPAddress]",
                "virtualNetworkName": "[variables('vnetName')]",
                "networkSecurityGroupName": "[variables('nsgName')]"
            }
        }
    }
}
